tests/baselines/reference/primitiveConstraints2.errors.txt
tests/cases/compiler/primitiveConstraints2.ts(8,11): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
tests/cases/compiler/primitiveConstraints2.ts(9,8): error TS2344: Type 'string' does not satisfy the constraint 'number'.


==== tests/cases/compiler/primitiveConstraints2.ts (2 errors) ====
    class C<T> {
       public bar2<U extends T>(x: T, y: U): T {
          return null;
         }
    }
     
    var x = new C<number>();
    x.bar2(2, ""); // should error
              ~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    x.bar2<string>(2, ""); // should error
           ~~~~~~
!!! error TS2344: Type 'string' does not satisfy the constraint 'number'.